<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kudu</string>
    <string name="action_settings">Settings</string>
    <string name="contentDescription">Logo</string>
    <string name="search_hint">Search conversations</string>
    <string name="action_search">Search</string>
    <string name="action_drawer">Settings</string>
    <string name="add_contact">Add Contact</string>
    
    <string name="username_login">username</string>
	<string name="password_login">password</string>
	<string name="login">Login</string>
	<string name="register">Register</string>
    
	<string name="username">Username</string>
	<string name="email">Email </string>
	<string name="password1">Password </string>
	<string name="password2">Re-enter Password </string>
	
	<string name="name">Name&#58;</string>
	<string name="username2">Username&#58;</string>
	<string name="email2">Email&#58;</string>
	<string name="password_old">Password&#58;</string>
	<string name="password_new">New Password&#58;</string>
	<string name="location">Location&#58;</string>
	<string name="biography">Biography&#58;</string>
	<string name="update">Update</string>
	
	<string name="profile">Profile</string>
	<string name="contacts">Contacts</string>
	
	<string name="drawer_open">Slider Menu Opened</string>
	<string name="drawer_close">Slider Menu Closed</string>
	<string name="action_websearch">Web search</string>
	<string name="app_not_available">Sorry there\'s no web browser available</string>
	
	<string-array name="nav_drawer_items">
	    <item>Conversations</item>
	    <item>Profile</item>
	    <item>Contacts</item>
	    <item>Log Out</item>
	</string-array>
	
	<string name="add_contact_message">Add a Contact</string>
	<string name="add_contact_btn">Add</string>
	<string name="add_contact_error_message">No contact of this name</string>
	<string name="add_contact_success_message">Added contact successfully</string>
	<string name="add_cancel_btn">Cancel</string>
	
	<string name="message_prompt">Type a message</string>
</resources>
