<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity" >

    <ImageView
         android:id="@+id/logo"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:contentDescription="@string/contentDescription"
         android:src="@drawable/login_logo" />
    
	<EditText
	    android:id="@+id/username"	
	    android:layout_centerHorizontal="true"  
	    android:layout_below="@+id/logo"  
		android:layout_width="250dp"
	  	android:layout_height="wrap_content"	  	  	
	  	android:layout_marginTop="20dp"
	  	android:layout_marginBottom="10dp"  	  	   
	    android:ems="10"
	    android:hint="@string/username"
	    android:inputType="text"
	    android:maxLength="20" />
	
	<EditText
	    android:id="@+id/email"
	    android:layout_centerHorizontal="true"
	    android:layout_below="@+id/username" 
	   	android:layout_width="250dp"
	    android:layout_height="wrap_content"
	  	android:layout_marginBottom="10dp"  	 	
	  	android:ems="10"
	    android:hint="@string/email"
	    android:inputType="textEmailAddress"
	    android:maxLength="20" />
	
	<EditText
	    android:id="@+id/password_1"
	    android:layout_centerHorizontal="true"
	    android:layout_below="@+id/email" 
	    android:layout_width="250dp"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="10dp"	    	
	    android:ems="10"
	    android:hint="@string/password1"
	    android:inputType="textPassword" 
	    android:maxLength="20" />	

	<EditText
	    android:id="@+id/password_2"
	    android:layout_centerHorizontal="true"	    	 
	    android:layout_width="250dp"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/password_1"
	    android:layout_marginBottom="10dp"	    	
	    android:ems="10"
	    android:hint="@string/password2"
	    android:inputType="textPassword"
	    android:maxLength="20" />	
		
	<Button
	    android:id="@+id/register"
	    android:layout_centerHorizontal="true" 
	    android:layout_width="100dp"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/password_2"
	    android:layout_marginBottom="50dp"
	    android:text="@string/register"
	    android:background="@drawable/selector" />
</RelativeLayout>
