<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

     <ImageView
         android:id="@+id/logo"
         android:layout_width="300dp"
         android:layout_height="300dp"
         android:layout_above="@+id/username"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="100dp"
         android:contentDescription="@string/contentDescription"
         android:src="@drawable/login_logo" />

     <EditText
         android:id="@+id/username"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_above="@+id/password"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="40dp"
         android:ems="10"
         android:hint="@string/username_login"
         android:inputType="text"
         android:maxLength="20" />

     <EditText
         android:id="@+id/password"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="160dp"
         android:ems="10"
         android:hint="@string/password_login"
         android:inputType="textPassword"
         android:maxLength="20" />

     <Button
	     android:id="@+id/login"
	     android:layout_width="100dp"
	     android:layout_height="wrap_content"
	     android:layout_alignBaseline="@+id/register"
	     android:layout_alignBottom="@+id/register"
	     android:layout_alignLeft="@+id/username"
	     android:text="@string/login"
     	 android:background="@drawable/selector" />
     
	 <Button
	     android:id="@+id/register"
	     android:layout_width="100dp"
	     android:layout_height="wrap_content"
	     android:layout_alignParentBottom="true"
	     android:layout_alignRight="@+id/password"
	     android:layout_marginBottom="88dp"
	     android:text="@string/register"
	     android:background="@drawable/btn_border" />	 

</RelativeLayout>
