<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:orientation="vertical" >

     <!-- =================UserNames==================== -->
     
       <TextView
        android:id="@+id/lbl_username"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txt_username"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="38dp"
        android:text="@string/username2" />
     
     <EditText
        android:id="@+id/txt_username"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt_password_new"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="text"
        android:maxLength="30"
        android:focusable="false" >
        
	</EditText>

    <!-- =================Names==================== -->

	<TextView
        android:id="@+id/lbl_name"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txt_name"
        android:layout_alignLeft="@+id/lbl_username"
        android:text="@string/name" />

    <EditText
        android:id="@+id/txt_name"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt_username"
        android:layout_below="@+id/txt_username"
        android:ems="10"
        android:inputType="text"
        android:maxLength="20"
         /> 
        
    <!-- ==================Email====================== -->

    <TextView
        android:id="@+id/lbl_email"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lbl_name"
        android:layout_below="@+id/lbl_name"
        android:layout_marginTop="17dp"
        android:text="@string/email2" />

    <EditText
        android:id="@+id/txt_email"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt_name"
        android:layout_below="@+id/txt_name"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:maxLength="40" />
    
    <!-- =================Old Password================== -->

	<TextView
        android:id="@+id/lbl_password_old"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txt_password_old"
        android:layout_alignLeft="@+id/lbl_email"
        android:text="@string/password_old" />

    <EditText
        android:id="@+id/txt_password_old"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt_email"
        android:layout_below="@+id/lbl_email"
        android:ems="10"
        android:inputType="textPassword"
        android:maxLength="20" />
  
    <!-- ================New Password==================== -->

    <TextView
        android:id="@+id/lbl_password_new"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lbl_password_old"
        android:layout_below="@+id/txt_password_old"
        android:layout_marginTop="18dp"
        android:text="@string/password_new" />
       
	<EditText
        android:id="@+id/txt_password_new"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txt_location"
        android:layout_marginLeft="44dp"
        android:layout_toRightOf="@+id/lbl_password_new"
        android:ems="10"
        android:inputType="textPassword"
        android:maxLength="20" >
    </EditText>
    
    <!-- =================Location===================== -->

	<TextView
        android:id="@+id/lbl_location"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lbl_password_new"
        android:layout_below="@+id/lbl_password_new"
        android:layout_marginTop="19dp"
        android:text="@string/location" />

    <EditText
        android:id="@+id/txt_location"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lbl_location"
        android:layout_alignLeft="@+id/txt_password_old"
        android:ems="10"
        android:inputType="text"
        android:maxLength="40" />
    
    <!-- =================Biography=================== -->

	<TextView
        android:id="@+id/lbl_biography"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txt_biography"
        android:layout_alignLeft="@+id/lbl_location"
        android:text="@string/biography" />

    <EditText
        android:id="@+id/txt_biography"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:height="50dp"
        android:layout_alignLeft="@+id/txt_location"
        android:layout_below="@+id/txt_location"
        android:ems="10"
        android:inputType="text|textMultiLine"
        android:maxLength="100"/>
    
     <!-- =================Update Button================= -->

    <Button
        android:id="@+id/update_btn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lbl_biography"
        android:layout_alignRight="@+id/txt_biography"
        android:layout_below="@+id/txt_biography"
        android:layout_marginTop="50dp"
        android:onClick="addGoal"
        android:text="@string/update" 
        android:background="@drawable/btn_border"/>
    
</RelativeLayout>